# dbx-mcp-copilot

./: .gitignore  README.md
mvp/: .env.example  .env.inputs.example  .env.secure.example  .env.secure.inputs.example  .gitignore  copilot-agent-design.md  copilot-publish-runbook.md  daily-account-planner-architecture.md  dap-simulator-auth-experiment-findings.md  docker-compose.yml  managed-identity-migration-notes.md  mcp-dev-architecture-design.md  mvp-setup-and-deployment-runbook.md  pyproject.toml
mvp/agents/: .dockerignore  Dockerfile  account_pulse.py  account_pulse_benchmark.py  api.py  auth_context.py  auth_smoke.py  config.py  customer_backend.py  customer_scope_seed.py  databricks_admin.py  databricks_network.py  databricks_seed.py  databricks_sql.py  databricks_tools.py  main.py  next_move.py  next_move_prompt.txt  parallel_scan.py  planner.py  requirements.txt  resilience.py  seed_entrypoint.py  server.py  session_store.py
mvp/appPackage/: manifest.template.json
mvp/dev_ui/: Dockerfile  __init__.py  app.py  server.py
mvp/infra/: README.md  bootstrap_helpers.py  cicd-overview.md  cicd-setup-guide.md  cicd-validation-and-operations.md  github-actions-cicd-design.md
mvp/m365_wrapper/: Dockerfile  __init__.py  app.py  config.py  debug_auth.py  planner_client.py  requirements.txt  server.py
mvp/m365_wrapper_csharp/: AdapterWithErrorHandler.cs  BackgroundTurnQueue.cs  BackgroundTurnWorker.cs  DailyAccountPlanner.WrapperPilot.csproj  Dockerfile  LegacyEnvBridge.cs  PlannerServiceClient.cs  Program.cs  README.md  WrapperPilotBot.cs  WrapperPilotOptions.cs
(+184 files in other folders)
