[project]
name = "daily-account-planner-local"
version = "0.1.0"
description = "Local development environment for the Daily Account Planner."
requires-python = ">=3.11"
dependencies = [
  "agent-framework==1.0.0rc4",
  "agent-framework-azure-ai==1.0.0rc4",
  "agent-framework-orchestrations==1.0.0b260311",
  "aiohttp>=3.12.0",
  "azure-identity>=1.25.0",
  "fastapi>=0.116.1",
  "httpx>=0.27.0",
  "microsoft-agents-authentication-msal>=0.8.0",
  "microsoft-agents-hosting-core>=0.8.0",
  "microsoft-agents-hosting-fastapi>=0.8.0",
  "msal>=1.31.1",
  "openai>=2.28.0",
  "openpyxl>=3.1.5",
  "pydantic>=2.0",
  "pydantic-settings>=2.10.1",
  "PyJWT[crypto]>=2.10.1",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = false
prerelease = "allow"
